--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
 <h1>ISMAIL KAYMAZ</h1>
 <h2>HAKKIMDA</h2>
-<p>Merhaba , ben Ismail KAYMAZ. Suleyman Demirel Universitesi bilgisayar mühendisliği 3.sinif ogrencisiyim. </p>
-<h3>Sevdigim Diziler</h3>
-<h4>Gibi</h4>
-<p>Yılmaz, İlkkan ve Ersoy... Sürekli olarak birbiriyle didişmekte olan üç arkadaş. En büyük özellikleri ise sıradan hayatlarını altüst edecek bir şeyler yapmayı her zaman becermek. Küçücük olayları inanılmaz bir ustalıkla büyütüyor, işleri saç baş yolduracak seviyeye getiriyorlar. Onlar her gün yaşadığımız talihsizliklerin, tuhaf olayların ve çaresizliklerin cisimleşmiş hali.</p>
+<p>Merhaba , ben Ismail KAYMAZ. Suleyman Demirel Universitesi Bilgisayar Mühendisliği 3.sinif ogrencisiyim. </p>
+<h3>Ilgi Alanlarim</h3>
+<ol>
+    <h4> <li>Dizi</li> </h4>    
+    <ul>
+        <li><a href="https://www.imdb.com/title/tt13675832/?ref_=fn_al_tt_1" target="_blank">Gibi</a></li>
+        <li>Behzat C.</li>
+    </ul>
+    <h4> <li>Film</li> </h4>
+    <ul>
+        <li><a href="https://www.imdb.com/title/tt2015381/?ref_=nv_sr_srsg_0" target="_blank">Galaksinin Koruyuculari</a></li>
+        <li>Thor</li>
+        <li>Iron Man</li>
+    </ul>
+    <h4> <li>Kitap</li> </h4>
+    <ul>
+        <li><a href="https://www.goodreads.com/book/show/18691912-totem-ve-tabu?from_search=true&from_srp=true&qid=yr6vfQGxLr&rank=2" target="_blank">Totem ve Tabu</a></li>
+        <li>Kitle Psikolojisi</li>
+        <li>Cocukluk Nevrozu</li>
+    </ul>
+</ol>
+<hr>
+<!-- <h4>Dizi</h4> -->
+<!-- <p>Yilmaz, Ilkkan ve Ersoy... Surekli olarak birbiriyle didismekte olan uc arkadas. En buyuk ozellikleri ise siradan hayatlarini altust edecek bir seyler yapmayi her zaman becermek. Kucucuk olaylari inanilmaz bir ustalkla buyutuyor, isleri sac bas yolduracak seviyeye getiriyorlar. Onlar her gun yasadigimiz talihsizliklerin, tuhaf olaylarin ve caresizliklerin cisimlesmis hali.</p> -->
+<img src="images/gibi.jpg" alt="gibi_afis">
+<p> <strong>Gibi Afis :</strong> Gorsel , gibi dizisinde rol alan yilmaz ve ilkkan karakterinden ve dizinin yayinlangigi platformdan olusuyor.</p>
